--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>島根県</title>
     </head>
     <body>
+        <h1>
+            島根県
+        </h1>
         <p>
             家電量販店は<a href="https://fuminishiki.github.io/shimaneken_kaden_mobile">こちら</a>
         </p>
